# medical-ocr-benchmarks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  scanner_fixer_benchmark.py
.github/workflows/: benchmark.yml  ci.yml  ground-truth-integration.yml  nightly-benchmark.yml  nightly-benchmarks.yml  pr-benchmark.yml  scanner-fixer-benchmark.yml  self_healing_pipeline.yml
benchmarks/: __init__.py
benchmarks/core/: __init__.py  metrics.py  reporter.py  runner.py
benchmarks/datasets/: golden.py
benchmarks/extended/: __init__.py  noise_and_style.py
benchmarks/ocr/: __init__.py  easyocr.py  paddleocr.py  surya.py  tesseract.py
benchmarks/postprocessor/: __init__.py  correction.py  phi.py
benchmarks/structure/: __init__.py  rtl_ltr.py  table_extraction.py
config/: baselines.yaml  thresholds.json  thresholds.yaml
data/: benchmark_results.json  datasets.json
data/arabic/: ar_cardio_001.json  ar_cardio_002.json  ar_cardio_003.json  ar_cardio_004.json  ar_cardio_005.json  ar_cardio_006.json  ar_discharge_001.json  ar_lab_001.json  ar_lab_002.json  ar_lab_003.json  ar_path_001.json  ar_path_002.json  ar_radio_001.json  ar_radio_002.json  ar_radio_003.json  ar_radio_004.json  ar_radio_005.json  ar_rx_001.json  ar_rx_002.json  ar_rx_003.json  ar_rx_004.json  ar_rx_005.json  ar_surg_001.json  ar_surg_002.json  ar_surg_003.json  noisy_handwriting.json
data/english/: en_cardio_001.json  en_cardio_002.json  en_cardio_003.json  en_cardio_004.json  en_cardio_005.json  en_cardio_006.json  en_discharge_001.json  en_lab_001.json  en_lab_002.json  en_path_001.json  en_path_002.json  en_path_003.json  en_radio_001.json  en_radio_002.json  en_radio_003.json  en_radio_004.json  en_radio_005.json  en_rx_001.json  en_rx_002.json  en_rx_003.json  en_rx_004.json  en_rx_005.json  en_surg_001.json  en_surg_002.json  en_surg_003.json  noisy_clinical_notes.json
data/golden/: ar_medical.json  en_medical.json  handwriting_styles.json  mixed_medical.json  noise_types.json  specialties_expanded.json
data/mixed/: mixed_cardio_001.json  mixed_cardio_002.json  mixed_cardio_003.json  mixed_discharge_001.json  mixed_lab_001.json  mixed_path_001.json  mixed_radio_001.json  mixed_radio_002.json  mixed_rx_001.json  mixed_rx_002.json  mixed_surg_001.json  noisy_clinical_mixed.json
data/structure/: rtl_ltr_golden.json  table_golden.json
scripts/: run_all_benchmarks.py
src/ab_testing/: __init__.py  ab_tester.py
src/benchmarks/: __init__.py  ci.py  dataset.py  metrics.py  report.py  runner.py
src/threshold/: __init__.py  threshold_checker.py
tests/: test_ab_tester.py  test_ci.py  test_dataset.py  test_metrics.py  test_report.py  test_threshold_checker.py
