[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-ocr-benchmarks"
version = "0.1.0"
description = "Benchmark suite for measuring OCR quality on medical documents (bilingual AR/EN)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dr. Abdulmalek", email = "drabdulmalek@users.noreply.github.com"},
]
keywords = ["ocr", "benchmark", "medical", "arabic", "cer", "wer", "handwriting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rapidfuzz>=3.0.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
]
ocr = [
    "Pillow>=10.0.0",
    "python-Levenshtein>=0.25.0",
    "paddleocr>=2.7.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
]
all = [
    "medical-ocr-benchmarks[dev,ocr]",
]

[project.scripts]
medocr-bench = "benchmarks.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
